--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "framer-motion": "^10.6.8",
     "next": "14.0.3",
     "openai": "^4.20.1",
+    "openai-edge": "^1.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
