--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ai": "^2.2.27",
     "axios": "^1.6.2",
     "framer-motion": "^10.6.8",
-    "next": "14.0.3",
+    "next": "^14.0.3",
     "openai": "^4.20.1",
     "openai-edge": "^1.2.2",
     "react": "^18",
@@ -35,7 +35,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "babel-preset-next": "^1.4.0",
+    "eslint": "^8.55.0",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
