--- a/package.json
+++ b/package.json
@@ -18,16 +18,28 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
+    "@huggingface/agents": "^0.0.5",
+    "@huggingface/hub": "^0.13.1",
+    "@huggingface/inference": "^2.6.4",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.0",
+    "@types/mdx": "^2.0.11",
     "ai": "^2.2.27",
     "axios": "^1.6.2",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.6.8",
+    "gray-matter": "^4.0.3",
     "next": "^14.0.3",
     "openai": "^4.20.1",
     "openai-edge": "^1.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
